--- a/src/package.json
+++ b/src/package.json
@@ -12,9 +12,15 @@
     "devDependencies": {
         "autoprefixer": "^10.4.2",
         "axios": "^0.21",
+        "browser-sync": "^2.27.9",
+        "browser-sync-webpack-plugin": "^2.3.0",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.4.6",
-        "tailwindcss": "^3.0.23"
+        "tailwindcss": "^3.0.23",
+        "vue-loader": "^16.2.0"
+    },
+    "dependencies": {
+        "vue": "^3.2.31"
     }
 }
