--- a/src/package.json
+++ b/src/package.json
@@ -21,6 +21,7 @@
         "vue-loader": "^16.2.0"
     },
     "dependencies": {
-        "vue": "^3.2.31"
+        "vue": "^3.2.31",
+        "vue-router": "^4.0.14"
     }
 }
